fixed text truncate

--- a/src/modules/posts/ui/post-card/post-card.scss
+++ b/src/modules/posts/ui/post-card/post-card.scss
@@ -92,6 +92,12 @@
     color: $darkColor;
 
     transition: color 0.5s ease;
+
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
   }
 
   &__description {
@@ -101,6 +107,12 @@
     color: $darkColor;
 
     margin: 0.5rem 0;
+
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* number of lines to show */
+    line-clamp: 3;
+    -webkit-box-orient: vertical;
   }
 
   .post-action {
